--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-placegolder
+<!DOCTYPE html>
+<html lang="en" class="bg-gray-900 text-white">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      .fade-in {
+        animation: fadeIn 0.8s ease-out;
+      }
+    </style>
+  </head>
+  <body class="flex items-center justify-center min-h-screen">
+    <div class="text-center fade-in">
+      <h1 class="text-4xl font-bold mb-4">Welcome to the Site</h1>
+      <p class="text-gray-400 text-lg">Explore what's behind the curtain.</p>
+    </div>
+  </body>
+</html>
