--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-gray-900 text-white">
+<html lang="en" class="bg-neutral-900 text-white">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      @keyframes fadeIn {
-        from { opacity: 0; transform: translateY(10px); }
+      @keyframes fadeInUp {
+        from { opacity: 0; transform: translateY(12px); }
         to { opacity: 1; transform: translateY(0); }
       }
-      .fade-in {
-        animation: fadeIn 0.8s ease-out;
+      .fade-in-up {
+        animation: fadeInUp 0.8s ease-out;
       }
     </style>
   </head>
-  <body class="flex items-center justify-center min-h-screen">
-    <div class="text-center fade-in">
-      <h1 class="text-4xl font-bold mb-4">Welcome to the Site</h1>
-      <p class="text-gray-400 text-lg">Explore what's behind the curtain.</p>
+  <body class="flex items-center justify-center min-h-screen px-6">
+    <div class="text-center space-y-6 fade-in-up">
+      <div>
+        <h1 class="text-4xl font-bold mb-2">Welcome to the Site</h1>
+        <p class="text-gray-400 text-lg">Explore what's behind the curtain.</p>
+      </div>
+      <div class="flex flex-col sm:flex-row justify-center gap-4">
+        <a href="#" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
+          Placeholder 1
+        </a>
+        <a href="#" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
+          Placeholder 2
+        </a>
+        <a href="#" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
+          Placeholder 3
+        </a>
+      </div>
     </div>
   </body>
 </html>
