--- a/servers/index.html
+++ b/servers/index.html
@@ -17,7 +17,7 @@
 
     <!-- Server 1 -->
     <div class="server-box" data-server="68.204.100.3">
-      <span class="status-dot green"></span>
+      <span class="status-dot red"></span>
       <div class="server-info">
 	<p>
  	Minecraft Main Server
