--- a/servers/index.html
+++ b/servers/index.html
@@ -8,7 +8,7 @@
 <body>
   <!-- Move title out of container -->
   <h1 class="page-title">
-    <span id="title-status-dot" class="status-dot green"></span>
+    <span id="title-status-dot" class="status-dot red"></span>
     Server Status
   </h1>
 
@@ -26,7 +26,17 @@
         <small class="server-version">1.21.5 Vanilla</small>
       </div>
     </div>
-
+    <!-- Server 1 -->
+    <div class="server-box" data-server="68.204.100.3">
+      <span class="status-dot red"></span>
+      <div class="server-info">
+	<p>
+ 	Minecraft Main Server
+	</p>
+        <small class="server-ip">IP Address: 68.204.100.3:25566</small>
+        <small class="server-version">1.19.2 Modded, llinklinklninkkninnl</small>
+      </div>
+    </div>
     <!-- More server boxes here -->
   </div>
 </body>
