--- a/servers/index.html
+++ b/servers/index.html
@@ -31,10 +31,10 @@
       <span class="status-dot red"></span>
       <div class="server-info">
 	<p>
- 	Minecraft Main Server
+ 	Minecraft Modded Server
 	</p>
         <small class="server-ip">IP Address: 68.204.100.3:25566</small>
-        <small class="server-version">1.19.2 Modded, llinklinklninkkninnl</small>
+        <small class="server-version">1.20.1 Modded, llinklinklninkkninnl</small>
       </div>
     </div>
     <!-- More server boxes here -->
