--- a/servers/index.html
+++ b/servers/index.html
@@ -16,16 +16,20 @@
     <small id="status-message" class="status-message">If "server status" is off, game server statuses may not be accurate.</small>
 
     <!-- Server 1 -->
-    <div class="server-box" data-server="68.204.100.3">
-      <span class="status-dot red"></span>
-      <div class="server-info">
-	<p>
- 	Minecraft Main Server
-	</p>
-        <small class="server-ip">IP Address: 68.204.100.3</small>
-        <small class="server-version">1.21.5 Vanilla</small>
-      </div>
-    </div>
+<div class="server-box" data-server="68.204.100.3">
+  <span class="status-dot red"></span>
+  <div class="server-info">
+    <p>Minecraft Main Server</p>
+    <small class="server-ip">IP Address: 68.204.100.3</small>
+    <small class="server-version">1.21.5 Vanilla</small>
+  </div>
+
+  <!-- Info icon with tooltip -->
+  <div class="info-icon-container">
+    <span class="info-icon" data-tooltip="Any minecraft installation works.">ⓘ</span>
+  </div>
+</div>
+
     <!-- Server 1 -->
     <div class="server-box" data-server="68.204.100.3">
       <span class="status-dot red"></span>
@@ -37,6 +41,11 @@
         <small class="server-version">1.20.1 Modded, llinklinklninkkninnl</small>
       </div>
     </div>
+	    <!-- Info icon with tooltip -->
+  <div class="info-icon-container">
+    <span class="info-icon" data-tooltip="Make sure modrinth is installed. *Defauly ammout of allocated ram is ~8GB, change as needed">ⓘ</span>
+  </div>
+</div>
     <!-- More server boxes here -->
   </div>
 </body>
