--- a/servers/index.html
+++ b/servers/index.html
@@ -8,14 +8,14 @@
 <body>
   <!-- Move title out of container -->
   <h1 class="page-title">
-    <span id="title-status-dot" class="status-dot red"></span>
+    <span id="title-status-dot" class="status-dot green"></span>
     Server Status
   </h1>
 
   <div class="container">
     <small id="status-message" class="status-message">If "server status" is off, game server statuses may not be accurate.</small>
 
-    <!-- Server 1 -->
+<!-- Example Server Box -->
 <div class="server-box" data-server="68.204.100.3">
   <span class="status-dot red"></span>
   <div class="server-info">
@@ -26,26 +26,24 @@
 
   <!-- Info icon with tooltip -->
   <div class="info-icon-container">
-    <span class="info-icon" data-tooltip="Any minecraft installation works.">ⓘ</span>
+    <span class="info-icon" data-tooltip="This is the main vanilla Minecraft server.">ⓘ</span>
+  </div>
+</div>
+<!-- Example Server Box -->
+<div class="server-box" data-server="68.204.100.3">
+  <span class="status-dot red"></span>
+  <div class="server-info">
+    <p>Minecraft Modded Server</p>
+    <small class="server-ip">IP Address: 68.204.100.3:25566</small>
+    <small class="server-version">1.21.5 Modded, linklinklink</small>
+  </div>
+
+  <!-- Info icon with tooltip -->
+  <div class="info-icon-container">
+    <span class="info-icon" data-tooltip="This is the main vasdsadanilla Minecraft server.">ⓘ</span>
   </div>
 </div>
 
-    <!-- Server 1 -->
-    <div class="server-box" data-server="68.204.100.3">
-      <span class="status-dot red"></span>
-      <div class="server-info">
-	<p>
- 	Minecraft Modded Server
-	</p>
-        <small class="server-ip">IP Address: 68.204.100.3:25566</small>
-        <small class="server-version">1.20.1 Modded, llinklinklninkkninnl</small>
-      </div>
-    </div>
-	    <!-- Info icon with tooltip -->
-  <div class="info-icon-container">
-    <span class="info-icon" data-tooltip="Make sure modrinth is installed. *Defauly ammout of allocated ram is ~8GB, change as needed">ⓘ</span>
-  </div>
-</div>
     <!-- More server boxes here -->
   </div>
 </body>
