--- a/servers/index.html
+++ b/servers/index.html
@@ -8,7 +8,7 @@
 <body>
   <!-- Move title out of container -->
   <h1 class="page-title">
-    <span id="title-status-dot" class="status-dot green"></span>
+    <span id="title-status-dot" class="status-dot red"></span>
     Server Status
   </h1>
 
