--- a/404.html
+++ b/404.html
@@ -3,37 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Page Not Found</title>
-  <link rel="stylesheet" href="/assets/css/main.css" />
+  <title>404 - Not Found</title>
   <style>
     body {
-      background-color: #1a1a1a;
-      color: #f5f5f5;
+      margin: 0;
+      padding: 0;
+      background-color: #000;
+      color: #888;
       font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       text-align: center;
-      padding: 50px;
     }
-    h1 {
-      font-size: 4em;
-      margin-bottom: 10px;
+
+    .face {
+      font-size: 3em;
+      color: #666;
+      margin-bottom: 0.5em;
     }
-    p {
-      font-size: 1.2em;
-      color: #999;
+
+    .text {
+      font-size: 0.95em;
+      color: #777;
     }
-    a {
+
+    .text a {
       color: #34c759;
       text-decoration: none;
       font-weight: bold;
     }
-    a:hover {
+
+    .text a:hover {
       text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>404</h1>
-  <p>Oops. That page doesn't exist.</p>
-  <p><a href="/">Return to Home</a></p>
+  <div class="face">:(</div>
+  <div class="text">
+    Page not found. <a href="/">Go to homepage</a>
+  </div>
 </body>
 </html>
