--- a/404.html
+++ b/404.html
@@ -20,31 +20,19 @@
     }
 
     .face {
-      font-size: 3em;
-      color: #666;
-      margin-bottom: 0.5em;
+      font-size: 1.5em;
+      color: #fff;
+      margin-bottom: 1em;
     }
 
     .text {
-      font-size: 0.95em;
+      font-size: 0.9em;
       color: #777;
-    }
-
-    .text a {
-      color: #34c759;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .text a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
 <body>
   <div class="face">:(</div>
-  <div class="text">
-    Page not found. <a href="/">Go to homepage</a>
-  </div>
+  <div class="text">Page not found. Return to homepage.</div>
 </body>
 </html>
