--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>404 - Not Found</title>
+  <title>Access Denied</title>
   <style>
     body {
       margin: 0;
@@ -20,7 +20,7 @@
     }
 
     .face {
-      font-size: 1.5em;
+      font-size: 1.0em;
       color: #fff;
       margin-bottom: 1em;
     }
@@ -32,7 +32,11 @@
   </style>
 </head>
 <body>
+<audio autoplay>
+  <source src="assets/error.mp3" type="audio/mpeg" />
+</audio>
+
   <div class="face">:(</div>
-  <div class="text">Page not found. Return to homepage.</div>
+  <div class="text">Return to homepage.</div>
 </body>
 </html>
