--- a/servers/index.html
+++ b/servers/index.html
@@ -40,7 +40,9 @@
 
   <!-- Info icon with tooltip -->
   <div class="info-icon-container">
-    <span class="info-icon" data-tooltip="Download modrinth to install the modpack. *Be default the modpack uses 8gb of ram so change that if needed **DO NOT UPDATE ANY MODS.">ⓘ</span>
+    <span class="info-icon" data-tooltip="Download modrinth to install the modpack. 
+*Be default the modpack uses 8gb of ram so change that if needed 
+**DO NOT UPDATE ANY MODS.">ⓘ</span>
   </div>
 </div>
 
