--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <a href="#" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
           Placeholder 1
         </a>
-        <a href="#" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
-          Placeholder 2
+        <a href="https://seventeennj.github.io/clips" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
+          Clips
         </a>
         <a href="https://seventeennj.github.io/servers" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
           Server Statuses
