--- a/clips/link/Replay 2025-05-18 23-14-12.html
+++ b/clips/link/Replay 2025-05-18 23-14-12.html
@@ -2,13 +2,15 @@
 <head>
   <title>Replay 2025-05-18 23-14-12</title>
   <meta property="og:type" content="video.other" />
-  <meta property="og:title" content="Replay 2025-05-18 23-14-12" />
-  <meta property="og:site_name" content="seventeennj.github.io/clips" />
   <meta property="og:video:type" content="video/mp4" />
   <meta property="og:video:width" content="720" />
   <meta property="og:video:height" content="405" />
   <meta property="og:image" content="URL_TO_YOUR_THUMBNAIL_IMAGE" />
   <meta property="og:image:type" content="image/png" />
+  <meta property="og:description" content="Find more clips at seventeennj.github.io/clips" />
+  <meta property="og:site_name" content="seventeennj.github.io/clips" />
+  
+  <meta property="og:title" content="Replay 2025-05-18 23-14-12" />
   <meta property="og:video" content="https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-18%2023-14-12.mp4" /> 
   <meta property="og:url" content="https://seventeennj.github.io/clips/link/Replay%202025-05-18%2023-14-12.html" />
 </head>
