--- a/clips/link/Replay 2025-05-18 23-14-12.html
+++ b/clips/link/Replay 2025-05-18 23-14-12.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Replay 2025-05-18 23-14-12</title>
+  
   <meta property="og:type" content="video.other" />
   <meta property="og:video:type" content="video/mp4" />
   <meta property="og:video:width" content="720" />
   <meta property="og:video:height" content="405" />
-  <meta property="og:image" content="URL_TO_YOUR_THUMBNAIL_IMAGE" />
-  <meta property="og:image:type" content="image/png" />
-  <meta property="og:description" content="Find more clips at seventeennj.github.io/clips" />
+
+  <!-- Embed Title (clickable) -->
+  <meta property="og:title" content="seventeennj.github.io/clips — Replay 2025-05-18 23-14-12" />
+  <!-- Embed URL (where users are taken when clicking title/site) -->
+  <meta property="og:url" content="https://seventeennj.github.io/clips/" />
+  <!-- Site name (appears below title, also clickable) -->
   <meta property="og:site_name" content="seventeennj.github.io/clips" />
-  
-  <meta property="og:title" content="Replay 2025-05-18 23-14-12" />
-  <meta property="og:video" content="https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-18%2023-14-12.mp4" /> 
-  <meta property="og:url" content="https://seventeennj.github.io/clips/link/Replay%202025-05-18%2023-14-12.html" />
+  <!-- Description (optional) -->
+  <meta property="og:description" content="Watch more clips at seventeennj.github.io/clips" />
+  <!-- Thumbnail image for preview -->
+  <meta property="og:image" content="https://yourdomain.com/path-to-thumbnail.png" />
+  <meta property="og:image:type" content="image/png" />
+
+  <!-- Video source -->
+  <meta property="og:video" content="https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-18%2023-14-12.mp4" />
 </head>
 
-<html>
 <body>
-  <video controls autoplay src="https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-18%2023-14-12.mp4" style="width: 100%; max-width: 720px;"></video>
+  <video controls autoplay style="width: 100%; max-width: 720px;" 
+    src="https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-18%2023-14-12.mp4">
+    Your browser does not support the video tag.
+  </video>
 </body>
 </html>
