Update Replay 2025-05-18 23-14-12.html

--- a/clips/link/Replay 2025-05-18 23-14-12.html
+++ b/clips/link/Replay 2025-05-18 23-14-12.html
@@ -2,29 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+    <!--TITLE CHANGE -->
   <title>Replay 2025-05-18 23-14-12</title>
   
   <meta property="og:type" content="video.other" />
   <meta property="og:video:type" content="video/mp4" />
   <meta property="og:video:width" content="720" />
   <meta property="og:video:height" content="405" />
-
-  <!-- Embed Title (clickable) -->
-  <meta property="og:title" content="seventeennj.github.io/clips — Replay 2025-05-18 23-14-12" />
-  <!-- Embed URL (where users are taken when clicking title/site) -->
-  <meta property="og:url" content="https://seventeennj.github.io/clips/" />
-  <!-- Site name (appears below title, also clickable) -->
-  <meta property="og:site_name" content="seventeennj.github.io/clips" />
-  <!-- Description (optional) -->
-  <meta property="og:description" content="Watch more clips at seventeennj.github.io/clips" />
-  <!-- Thumbnail image for preview -->
   <meta property="og:image" content="https://yourdomain.com/path-to-thumbnail.png" />
   <meta property="og:image:type" content="image/png" />
-
+  <!--URL NO CHANGE -->
+  <meta property="og:url" content="https://seventeennj.github.io/clips/" />
+  <!-- URL NO CHANGE -->
+  <meta property="og:site_name" content="seventeennj.github.io/clips" />
+  <!-- Description NO CHANGE -->
+  <meta property="og:description" content="Watch more clips at seventeennj.github.io/clips" />
+  <!--NAME CHANGE -->
+  <meta property="og:title" content="Replay 2025-05-18 23-14-12" />
+  
   <!-- Video source -->
   <meta property="og:video" content="https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-18%2023-14-12.mp4" />
 </head>
-
+   <!--SRC CHANGE -->
 <body>
   <video controls autoplay style="width: 100%; max-width: 720px;" 
     src="https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-18%2023-14-12.mp4">
