Update Replay 2025-05-18 23-14-12.html

--- a/clips/link/Replay 2025-05-18 23-14-12.html
+++ b/clips/link/Replay 2025-05-18 23-14-12.html
@@ -15,13 +15,13 @@
   <meta property="og:url" content="https://seventeennj.github.io/clips/" />
   <!-- URL NO CHANGE -->
   <meta property="og:site_name" content="seventeennj.github.io/clips" />
-  <!-- Description NO CHANGE -->
-  <meta property="og:description" content="Watch more clips at seventeennj.github.io/clips" />
+  
   <!--NAME CHANGE -->
   <meta property="og:title" content="Replay 2025-05-18 23-14-12" />
-  
-  <!-- Video source -->
+
+  <!-- Video Source CHANGE -->
   <meta property="og:video" content="https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-18%2023-14-12.mp4" />
+  
 </head>
    <!--SRC CHANGE -->
 <body>
