--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         <p class="text-gray-400 text-lg text-shadow">n</p>
       </div>
       <div class="flex flex-col sm:flex-row justify-center gap-4">
-        <a href="#" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
-          Placeholder 1
-        </a>
         <a href="https://seventeennj.github.io/clips" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
           Clips
+        </a>
+        <a href="https://seventeennj.github.io/guides" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
+          Guides
         </a>
         <a href="https://seventeennj.github.io/servers" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
           Server Statuses
