--- a/clips/index.html
+++ b/clips/index.html
@@ -172,7 +172,7 @@
             <button class="menu-button">⋮</button>
             <div class="menu">
               <a href="${clip.url}" target="_blank">Open File</a>
-              <a href="#" onclick="navigator.clipboard.writeText('https://seventeennj.github.io/clips/link/${encodeURIComponent(clip.name)}.html'); return false;">Copy Link</a>
+              <a href="#" onclick="navigator.clipboard.writeText('https://seventeennj.github.io/clips/link/${encodeURIComponent(clip.name)}.html'); return false;">Copy Sharable Link</a>
             </div>
           </div>
         </div>
