Update Replay 2025-05-18 23-14-12.html

--- a/clips/link/Replay 2025-05-18 23-14-12.html
+++ b/clips/link/Replay 2025-05-18 23-14-12.html
@@ -2,28 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-    <!--TITLE CHANGE -->
-  <title>Replay 2025-05-18 23-14-12</title>
   
+  <!-- TITLE CHANGE -->
+  <title>Replay 2025-05-18 23-14-12</title>
+
+  <!-- REDIRECT for real users -->
+  <script>
+    window.location.replace("https://seventeennj.github.io/clips");
+  </script>
+  
+  <!-- og:type info for Discord embedding -->
   <meta property="og:type" content="video.other" />
   <meta property="og:video:type" content="video/mp4" />
   <meta property="og:video:width" content="720" />
   <meta property="og:video:height" content="405" />
+  
+  <!-- THUMBNAIL IMAGE CHANGE -->
   <meta property="og:image" content="https://yourdomain.com/path-to-thumbnail.png" />
   <meta property="og:image:type" content="image/png" />
-  <!--URL NO CHANGE -->
+  <!-- URL NO CHANGE -->
   <meta property="og:url" content="https://seventeennj.github.io/clips/" />
   <!-- URL NO CHANGE -->
   <meta property="og:site_name" content="seventeennj.github.io/clips" />
-  
-  <!--NAME CHANGE -->
-  <meta property="og:title" content="Replay 2025-05-18 23-14-12" />
 
-  <!-- Video Source CHANGE -->
-  <meta property="og:video" content="https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-18%2023-14-12.mp4" />
   
+  <!-- NAME CHANGE -->
+  <meta property="og:title" content="Replay 2025-05-18 23-14-12" />
+  <!-- VIDEO SOURCE CHANGE -->
+  <meta property="og:video" content="https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-18%2023-14-12.mp4" />
 </head>
-   <!--SRC CHANGE -->
+
+<!-- SRC CHANGE -->
 <body>
   <video controls autoplay style="width: 100%; max-width: 720px;" 
     src="https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-18%2023-14-12.mp4">
