--- a/clips/index.html
+++ b/clips/index.html
@@ -119,7 +119,15 @@
 </head>
 <body>
 
-  <h1></h1>
+<div style="display: flex; justify-content: flex-end; padding: 20px; padding-bottom: 0;">
+  <label for="gameFilter" style="margin-right: 8px; line-height: 32px;">
+  <select id="gameFilter" style="padding: 6px 10px; border-radius: 4px; background: #1e1e1e; color: white; border: 1px solid #444;">
+    <option value="All">All</option>
+  </select>
+</div>
+
+
+  <!--<h1></h1>-->
   <div class="grid" id="clipGrid"></div>
 
   <script>
@@ -127,52 +135,76 @@
       {
         name: "Replay 2025-05-18 23-14-12",
         url: "https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-18%2023-14-12.mp4",
-        duration: "0:00",
+        duration: "0:28",
         size: "65.1 MB",
         author: "nj",
         game: "Roblox"
-      }
+      },
     ];
 
-    const grid = document.getElementById('clipGrid');
+const grid = document.getElementById('clipGrid');
+  const gameFilter = document.getElementById('gameFilter');
 
-    clips.forEach(clip => {
-      const card = document.createElement('div');
-      card.className = 'clip-card';
+  // Dynamically populate the filter dropdown
+  const uniqueGames = [...new Set(clips.map(c => c.game))];
+  uniqueGames.forEach(game => {
+    const option = document.createElement('option');
+    option.value = game;
+    option.textContent = game;
+    gameFilter.appendChild(option);
+  });
 
-      card.innerHTML = `
-        <video src="${clip.url}" controls></video>
-        <div class="clip-info">
-          <div class="clip-title-line">
-            <span class="clip-title">${clip.name}</span>
-            <span class="clip-author">clipped by ${clip.author || "Unknown"}</span>
-          </div>
-          <div class="clip-meta">${clip.size}${clip.game ? ' · ' + clip.game : ''}</div>
-          <div class="menu-wrapper">
-            <button class="menu-button">⋮</button>
-            <div class="menu">
-              <a href="#" onclick="navigator.clipboard.writeText('https://seventeennj.github.io/clips/link/${encodeURIComponent(clip.name)}.html'); return false;">Copy Sharable Link</a>
-              <a href="${clip.url}" target="_blank">Open File</a>
+  function renderClips(filterGame = "All") {
+    grid.innerHTML = ""; // Clear current clips
+
+    clips
+      .filter(clip => filterGame === "All" || clip.game === filterGame)
+      .forEach(clip => {
+        const card = document.createElement('div');
+        card.className = 'clip-card';
+
+        card.innerHTML = `
+          <video src="${clip.url}" controls></video>
+          <div class="clip-info">
+            <div class="clip-title-line">
+              <span class="clip-title">${clip.name}</span>
+              <span class="clip-author">clipped by ${clip.author || "Unknown"}</span>
+            </div>
+            <div class="clip-meta">${clip.size}${clip.game ? ' · ' + clip.game : ''}</div>
+            <div class="menu-wrapper">
+              <button class="menu-button">⋮</button>
+              <div class="menu">
+                <a href="#" onclick="navigator.clipboard.writeText('https://seventeennj.github.io/clips/link/${encodeURIComponent(clip.name)}.html'); return false;">Copy Sharable Link</a>
+                <a href="${clip.url}" target="_blank">Open File</a>
+              </div>
             </div>
           </div>
-        </div>
-      `;
+        `;
 
-      const btn = card.querySelector('.menu-button');
-      const menu = card.querySelector('.menu');
+        const btn = card.querySelector('.menu-button');
+        const menu = card.querySelector('.menu');
 
-      btn.onclick = (e) => {
-        e.stopPropagation();
-        menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
-      };
+        btn.onclick = (e) => {
+          e.stopPropagation();
+          menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+        };
 
-      document.addEventListener('click', () => {
-        menu.style.display = 'none';
+        document.addEventListener('click', () => {
+          menu.style.display = 'none';
+        });
+
+        grid.appendChild(card);
       });
+  }
 
-      grid.appendChild(card);
-    });
-  </script>
+  // Initial render
+  renderClips();
+
+  // Listen for filter changes
+  gameFilter.addEventListener('change', () => {
+    renderClips(gameFilter.value);
+  });
+</script>
 
 </body>
 </html>
