--- a/guides/OBSClipping.html
+++ b/guides/OBSClipping.html
@@ -175,10 +175,10 @@ Start at 18, best option for clipping. Go higher if your system cannot handle.</
     <p>For Preset, start at P5, if your system cant handle try a faster option (lower number) .</p>
     <img src="images/OBSClipping/OBSClipping9.png" alt="img 2" class="guide-image" />
 
-    <p>Now at the top click on the "Replay Buffer" tab. Select "Enable Replay Buffer" and set in seconds how long you want each clip to be, you can leave maximu memory unchanged</p>
+    <p>Now at the top click on the "Replay Buffer" tab. Select "Enable Replay Buffer" and set in seconds how long you want each clip to be, you can leave maximum memory unchanged</p>
     <img src="images/OBSClipping/OBSClipping10.png" alt="img 2" class="guide-image" />
 
-    <p>Now on the side select "Video" and have the Base resolution at your monitors reoluton, and your output scaled resoluution at whatever you desire. Stick to common fps values.</p>
+    <p>Now on the side select "Video" and have the Base resolution at your monitors reoluton, and your output scaled resolution at whatever you desire. Stick to common fps values for best performance.</p>
     <img src="images/OBSClipping/OBSClipping11.png" alt="img 2" class="guide-image" />
 
     <p>Now go to "Hotkeys" on the side, and look for "Save Replay" and press a hotkey or key you want to press to save your clip. Alternatively if you have a streamdeck use that for saving the clip instead.</p>
