--- a/clips/index.html
+++ b/clips/index.html
@@ -140,7 +140,7 @@
       game: "Roblox"
     },
     {
-      name: "Replay 2025-05-20 22-17-02",
+      name: "Project X - Replay 2025-05-20 22-17-02",
       url: "https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-20%2022-17-02.mp4",
       duration: "0:17",
       size: "37.9 MB",
@@ -148,10 +148,18 @@
       game: "🎥 Movie Night"
     },
     {
-      name: "Replay 2025-05-20 22-00-44",
+      name: "Project X - Replay 2025-05-20 22-00-44",
       url: "https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-20%2022-00-44.mp4",
-      duration: "0:7",
+      duration: "0:07",
       size: "8.9 MB",
+      author: "nj",
+      game: "🎥 Movie Night"
+    },
+        {
+      name: "Paranormal Activity 3 -Replay 2025-05-21 00-54-00-01-58-15.html",
+      url: "https://file.garden/aCqlDv1ELCRFgQBY/clips/Paranormal%20Activity%203%20-Replay%202025-05-21%2000-54-00-01-58-15",
+      duration: "0:35",
+      size: "49.2 MB",
       author: "nj",
       game: "🎥 Movie Night"
     },
