--- a/clips/link/Paranormal Activity 3 -Replay 2025-05-21 00-54-00-01-58-15.html
+++ b/clips/link/Paranormal Activity 3 -Replay 2025-05-21 00-54-00-01-58-15.html
@@ -29,7 +29,7 @@
   <!-- NAME CHANGE -->
   <meta property="og:title" content="Paranormal Activity 3 -Replay 2025-05-21 00-54-00-01-58-15" />
   <!-- VIDEO SOURCE CHANGE -->
-  <meta property="og:video" content="https://file.garden/aCqlDv1ELCRFgQBY/clips/Paranormal%20Activity%203%20-Replay%202025-05-21%2000-54-00-01-58-15.html" />
+  <meta property="og:video" content="https://file.garden/aCqlDv1ELCRFgQBY/clips/Paranormal%20Activity%203%20-Replay%202025-05-21%2000-54-00-01-58-15" />
 </head>
 
 <!-- SRC CHANGE -->
