--- a/clips/index.html
+++ b/clips/index.html
@@ -156,8 +156,8 @@
       game: "🎥 Movie Night"
     },
         {
-      name: "Paranormal Activity 3 -Replay 2025-05-21 00-54-00-01-58-15",
-      url: "https://file.garden/aCqlDv1ELCRFgQBY/clips/Paranormal%20Activity%203%20-Replay%202025-05-21%2000-54-00-01-58-15",
+      name: "Paranormal Activity 3 - Replay 2025-05-21 00-54-00-01-58-15",
+      url: "https://file.garden/aCqlDv1ELCRFgQBY/clips/Paranormal%20Activity%203%20-%20Replay%202025-05-21%2000-54-00-01-58-15.mp4",
       duration: "0:35",
       size: "49.2 MB",
       author: "nj",
