--- a/guides/index.html
+++ b/guides/index.html
@@ -121,13 +121,13 @@
         title: "Clipping Gameplay",
         description: "This guide shows you how to clip your own gameplay with OBS, better than alternatives like medal.",
         image: "images/OBSClippingTHUMBNAIL.png",
-        url: "OBSClipping.html"
+        url: "OBSClipping/"
       },
       {
         title: "Compressing Videos",
         description: "Compress videos or clips to be able to upload them in discord or a file sharing site.",
         image: "images/CompressingVideosTHUMBNAIL.png",
-        url: "CompressingVideos.html"
+        url: "CompressingVideos/"
       },
 
       // Add more guides here
