--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           Guides
         </a>
         <a href="https://seventeennj.github.io/servers" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
-          Server Statuses
+          Servers
         </a>
       </div>
     </div>
