--- a/guides/WinRARGuide/index.html
+++ b/guides/WinRARGuide/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>OBS Clipping</title>
+  <title>WinRAR Guide</title>
   <style>
     /* Reset and basics */
     body, html {
@@ -141,57 +141,34 @@
 <body>
 
   <div class="title-container">
-    <h1>Clipping Gameplay</h1>
-<img src="../images/OBSClippingTHUMBNAIL.png" alt="Guide thumbnail" class="guide-thumbnail" />
+    <h1>Fucking winrar guide for retards holy shit click extract</h1>
+<img src="../images/WinRARGuideTHUMBNAIL.png" alt="Guide thumbnail" class="guide-thumbnail" />
   </div>
 
 
   <div class="container">
-    <p>First, install OBS at this link: https://obsproject.com</p>
+    <p>First, install WinRAR if you don't have it: https://www.win-rar.com/start.html</p>
 
-    <p>Once installed, skip the Auto-Configuration Wizard</p>
-    <img src="../images/OBSClipping/OBSClipping2.png" alt="img 2" class="guide-image" />
+    <p>During installation make sure to check support for 7z</p>
+    <img src="../images/WinRARGuide/WinRARGuide1.png" alt="img 2" class="guide-image" />
+    
+    
+    <p>Now open up your file you want to extract, open with WinRAR if asked</p>
 
-    <p>Now, by the "Scenes" and "Sources" boxes, click the plus icon in the 'Scenes' box and create a new scene, and give it a name. Click on it and click the plus icon in 'Sources' and select display capture.</p>
-    <img src="../images/OBSClipping/OBSClipping3.gif" alt="img 2" class="guide-image" />
+    <p>Now click on the fucking button saying extract to and select a location, note: you may need to extract it into a folder so make one</p>
+    <img src="../images/WinRARGuide/WinRARGuide2.gif" alt="img 2" class="guide-image" />
 
-    <p>Make sure your microphone and audio is set up correctly, and detects input or output. Later we will see if our audio levels need to be adjusted.</p>
-    <img src="../images/OBSClipping/OBSClipping4.gif" alt="img 2" class="guide-image" />
+    <p>Now you can go to where the files extracted</p>
 
-    <p>Now click on "Settings" in the controls box and go to Output, then change Output Mode to Advanced. Then click on the "Recording" tab.</p>
-    <img src="../images/OBSClipping/OBSClipping5.png" alt="img 2" class="guide-image" />
-
-    <p>Make sure your recording format and audio encoder matches mine. For video encoder if available use "NVIDIA NVENC H.264" or better, 
-for AMD use "AMF" If you do not see these options resort to x264 (cpu). DO NOT add more audio tracks then default unless you know what you're doing, therfore dont copy my audio tracks.</p>
-    <img src="../images/OBSClipping/OBSClipping6.png" alt="img 2" class="guide-image" />
-
-    <p>Now match your settings to mine before we tweak to match your system.</p>
-    <img src="../images/OBSClipping/OBSClipping7.png" alt="img 2" class="guide-image" />
-
-    <p>For your CQP level, adjust until you experience no lag in your recording. Lower number = better quality and bigger file size. stick within a range from 14-21. 
-Start at 18, best option for clipping. Go higher if your system cannot handle.</p>
-    <img src="../images/OBSClipping/OBSClipping8.png" alt="img 2" class="guide-image" />
-
-    <p>For Preset, start at P5, if your system cant handle try a faster option (lower number) .</p>
-    <img src="../images/OBSClipping/OBSClipping9.png" alt="img 2" class="guide-image" />
-
-    <p>Now at the top click on the "Replay Buffer" tab. Select "Enable Replay Buffer" and set in seconds how long you want each clip to be, you can leave maximum memory unchanged</p>
-    <img src="../images/OBSClipping/OBSClipping10.png" alt="img 2" class="guide-image" />
-
-    <p>Now on the side select "Video" and have the Base resolution at your monitors reoluton, and your output scaled resolution at whatever you desire. Stick to common fps values for best performance.</p>
-    <img src="../images/OBSClipping/OBSClipping11.png" alt="img 2" class="guide-image" />
-
-    <p>Now go to "Hotkeys" on the side, and look for "Save Replay" and press a hotkey or key you want to press to save your clip. Alternatively if you have a streamdeck use that for saving the clip instead.</p>
-    <img src="../images/OBSClipping/OBSClipping12.png" alt="img 2" class="guide-image" />
-    <img src="../images/OBSClipping/OBSClipping13.png" alt="img 2" class="guide-image" />
-
-    <p>Finally exit out of settings and click on "Start Replay Buffer". Now whenever you hit your hotkey or button, it will save a clip for the duration you set, where you set it to save.</p>
-    <img src="../images/OBSClipping/OBSClipping15.png" alt="img 2" class="guide-image" />
+    <p>Important note: If you need to download MULTIPLE parts for a game, to extract them put all of the zip files in ONE folder, and extract the first part, and it will take care of the other parts for you.
+      If that doesnt work, highlight all parts and right click and click "Extract Here"
+    </p>
+    <img src="../images/WinRARGuide/WinRARGuide3.png" alt="img 3" class="guide-image" />
 
 
 <div class="next-section">
   <p>Next, check out:</p>
-  <a href="../CompressingVideos/" class="next-button">Guide: Compressing Videos</a>
+  <a href="../Sources/" class="next-button">Sources</a>
 </div>
 
 
