--- a/guides/index.html
+++ b/guides/index.html
@@ -117,6 +117,18 @@
   <script>
     // Example guide data
     const guides = [
+       {
+        title: "Sources",
+        description: "Sources for things like games, software, movies, etc. Adblocker like uBlock Origin reccomended",
+        image: "images/SourcesTHUMBNAIL.png",
+        url: "Sources/"
+      },
+      {
+        title: "fucking winrar guide",
+        description: "Show you how to fucking click extract",
+        image: "images/WinRARGuideTHUMBNAIL.png",
+        url: "WinRARGuide/"
+      },
       {
         title: "Clipping Gameplay",
         description: "This guide shows you how to clip your own gameplay with OBS, better than alternatives like medal.",
