--- a/index.html
+++ b/index.html
@@ -1,170 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Guides</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #121212;
-      font-family: "Segoe UI", sans-serif;
-      color: white;
-    }
+<html lang="en" class="bg-neutral-900 text-white">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      @keyframes fadeInUp {
+        from { opacity: 0; transform: translateY(12px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      .fade-in-up {
+        animation: fadeInUp 0.8s ease-out;
+      }
 
-    h1 {
-      padding: 20px;
-      font-size: 24px;
-      border-bottom: 1px solid #2c2c2c;
-      margin-bottom: 0;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 16px;
-      padding: 20px;
-    }
-
-.guide-card {
-  background-color: #2a2a2a; /* brighter than #1e1e1e */
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.7); /* stronger shadow */
-  border: 1.5px solid #444; /* subtle border */
-  cursor: pointer;
-  position: relative;
-  overflow: visible;
-  transition: transform 0.2s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+      /* Default background image (initially enabled or disabled in the script) */
+     .bg-image {
+  background-image: 
+    url('https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExYXQ2bnRnMDBueWgyaWpmc2Z0Znc0MGNleDJhYzU0eWR3b3BxeDJheCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/EFP6lI49J5Ure/giphy.gif'), /* remote first */
+    url('assets/bak.gif'); /* fallback */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.guide-card:hover {
-  transform: scale(1.03);
-  box-shadow: 0 8px 24px rgba(255, 255, 255, 0.2); /* light glow on hover */
-  border-color: #666;
-  z-index: 10;
-}
+      /* Stronger text shadow */
+      .text-shadow {
+        text-shadow: 4px 4px 15px rgba(0, 0, 0, 0.8); /* Stronger shadow */
+      }
 
+      /* Rainbow animation for text */
+      @keyframes rainbow {
+        0% { color: red; }
+        14% { color: orange; }
+        28% { color: yellow; }
+        42% { color: green; }
+        57% { color: blue; }
+        71% { color: indigo; }
+        85% { color: violet; }
+        100% { color: red; }
+      }
 
-.guide-title {
-  font-weight: bold;
-  font-size: 16px;
-  padding: 12px 16px;
-  background-color: #121212;
-  border-radius: 8px 8px 0 0;
-  display: flex;
-  align-items: center;    /* vertical center */
-  justify-content: center; /* horizontal center */
-  text-align: center;      /* fallback */
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
+      /* Apply rainbow effect to the word "Hi" */
+      .rainbow-text {
+        display: inline;
+        animation: rainbow 3s infinite;
+      }
+    </style>
+  </head>
+  <body class="flex items-center justify-center min-h-screen px-6 bg-neutral-900 text-white" id="body">
+    <div class="text-center space-y-6 fade-in-up">
+      <div>
+        <h1 class="text-4xl font-bold mb-2 text-shadow">
+          Welcome <span class="rainbow-text">nigga</span>
+        </h1>
+        <p class="text-gray-400 text-lg text-shadow">n</p>
+      </div>
+      <div class="flex flex-col sm:flex-row justify-center gap-4">
+        <a href="https://seventeennj.github.io/clips" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
+          Clips
+        </a>
+        <a href="https://seventeennj.github.io/guides" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
+          Guides
+        </a>
+        <a href="https://seventeennj.github.io/servers" class="px-6 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition text-white font-medium">
+          Servers
+        </a>
+      </div>
+    </div>
 
+    <script>
+      // Toggle background image on or off (true = enabled, false = disabled)
+      const enableBgImage = true; // Set to false to disable the background image
 
-    .guide-hover-info {
-      position: absolute;
-      top: 100%; /* position right below the card */
-      left: 50%;
-      transform: translate(-50%, 12px) scale(0);
-      width: auto;
-      max-width: 320px; /* limit max size */
-      background-color: rgba(18, 18, 18, 0.98);
-      color: #ccc;
-      padding: 20px;
-      box-sizing: border-box;
-      border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.8);
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.3s ease, transform 0.3s ease;
-      z-index: 100;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      user-select: none;
-    }
+      const body = document.getElementById('body');
 
-    .guide-card:hover .guide-hover-info {
-      opacity: 1;
-      pointer-events: auto;
-      transform: translate(-50%, 0) scale(1);
-    }
-
-    .guide-hover-info img {
-      max-width: 100%;
-      height: auto; /* keep natural aspect ratio */
-      border-radius: 12px;
-      margin-bottom: 16px;
-      object-fit: contain;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.7);
-      user-select: none;
-    }
-
-    .guide-hover-info p {
-      font-size: 14px;
-      line-height: 1.4;
-      margin: 0;
-      user-select: text;
-    }
-  </style>
-</head>
-<body>
-  <h1>Guides</h1>
-  <div class="grid" id="guidesGrid">
-    <!-- Guides inserted by script -->
-  </div>
-
-  <script>
-    // Example guide data
-    const guides = [
-       {
-        title: "Sources",
-        description: "Sources for things like games, software, movies, etc. Adblocker like uBlock Origin reccomended",
-        image: "images/SourcesTHUMBNAIL.png",
-        url: "Sources/"
-      },
-      {
-        title: "fucking winrar guide",
-        description: "Show you how to fucking click extract",
-        image: "images/WinRARGuideTHUMBNAIL.png",
-        url: "WinRARGuide/"
-      },
-      {
-        title: "Clipping Gameplay",
-        description: "This guide shows you how to clip your own gameplay with OBS, better than alternatives like medal.",
-        image: "images/OBSClippingTHUMBNAIL.png",
-        url: "OBSClipping/"
-      },
-      {
-        title: "Compressing Videos",
-        description: "Compress videos or clips to be able to upload them in discord or a file sharing site.",
-        image: "images/CompressingVideosTHUMBNAIL.png",
-        url: "CompressingVideos/"
-      },
-
-      // Add more guides here
-    ];
-
-    const grid = document.getElementById("guidesGrid");
-
-    guides.forEach(guide => {
-      const card = document.createElement("div");
-      card.className = "guide-card";
-
-      card.innerHTML = `
-        <div class="guide-title">${guide.title}</div>
-        <div class="guide-hover-info">
-          <img src="${guide.image}" alt="${guide.title} Image" />
-          <p>${guide.description}</p>
-        </div>
-      `;
-
-      card.onclick = () => {
-        window.location.href = guide.url;
-      };
-
-      grid.appendChild(card);
-    });
-  </script>
-</body>
+      if (enableBgImage) {
+        body.classList.add('bg-image');
+      } else {
+        body.classList.remove('bg-image');
+      }
+    </script>
+  </body>
 </html>
