--- a/guides/index.html
+++ b/guides/index.html
@@ -121,25 +121,25 @@
         title: "Sources",
         description: "Sources for things like games, software, movies, etc. Adblocker like uBlock Origin reccomended",
         image: "images/SourcesTHUMBNAIL.png",
-        url: "Sources/"
+        url: "sources/"
       },
       {
         title: "fucking winrar guide",
         description: "Show you how to fucking click extract",
         image: "images/WinRARGuideTHUMBNAIL.png",
-        url: "WinRARGuide/"
+        url: "winrarguide/"
       },
       {
         title: "Clipping Gameplay",
         description: "This guide shows you how to clip your own gameplay with OBS, better than alternatives like medal.",
         image: "images/OBSClippingTHUMBNAIL.png",
-        url: "OBSClipping/"
+        url: "obsclipping/"
       },
       {
         title: "Compressing Videos",
         description: "Compress videos or clips to be able to upload them in discord or a file sharing site.",
         image: "images/CompressingVideosTHUMBNAIL.png",
-        url: "CompressingVideos/"
+        url: "compressingvideos/"
       },
 
       // Add more guides here
